--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -21,11 +21,11 @@
                       [dataset]="state.data"
                       [loading]="state.status === 'Loading'"
                       [pageInfo]="state.pageInfo"
-                      [searchFieldOptions]="['displayName']"
+                      [searchFieldOptions]="store.searchColumns"
                       (itemsSelectedChange)="selectedTable = $event || []"
                       (pageChange)="store.changePage($event)"
                       (searchChange)="
-          store.searchChange($event.searchText, $event.searchField)
+          store.search($event.searchText, $any($event.searchField))
         ">
         <div [header]="'Name'"
              key="displayName"
