--- a/apps/mix-cms/src/app/pages/portal/page/page.component.html
+++ b/apps/mix-cms/src/app/pages/portal/page/page.component.html
@@ -4,13 +4,15 @@
     <mix-sub-toolbar [description]="'LISTING'"
                      [title]="'All Pages'">
       <mix-button (click)="addNew()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp; Add</mix-button>
+                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
+        Add</mix-button>
       <div class="toolbar-separator"></div>
       <mix-button class="mr-1"
                   type="secondary-danger"
                   [disabled]="!selectedPages.length"
                   size="s">
-        <span class="material-symbols-outlined"> delete </span>&nbsp; Delete</mix-button>
+        <span class="material-symbols-outlined"> delete </span>&nbsp;
+        Delete</mix-button>
     </mix-sub-toolbar>
 
     <div class="data-table-page__body">
@@ -18,12 +20,10 @@
                       [dataset]="state.data"
                       [loading]="state.status === 'Loading'"
                       [pageInfo]="state.pageInfo"
-                      [searchFieldOptions]="['title']"
+                      [searchFieldOptions]="store.searchColumns"
                       (itemsSelectedChange)="selectedPages = $event || []"
                       (pageChange)="store.changePage($event)"
-                      (searchChange)="
-          store.searchChange($event.searchText, $event.searchField)
-        ">
+                      (searchChange)="store.search($event.searchText, $event.searchField)">
         <div [columnType]="'CHECKBOX'"
              mixTableColumn></div>
 
