--- a/apps/mix-cms/src/assets/styles/shares/page-detail.scss
+++ b/apps/mix-cms/src/assets/styles/shares/page-detail.scss
@@ -9,6 +9,17 @@
   border: 1px solid var(--border-color-default);
   overflow: hidden;
 
+  &__input-title {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+
+    &.--empty {
+      opacity: 0.6;
+    }
+  }
+
   &__toolbar {
     padding: 12px 18px 0px 18px;
     height: fit-content;
