--- a/libs/mix-ui/src/data-table/data-table.component.scss
+++ b/libs/mix-ui/src/data-table/data-table.component.scss
@@ -15,6 +15,10 @@
   flex-direction: column;
   padding-top: 12px;
 
+  .search-input {
+    min-width: 200px;
+  }
+
   &__checkbox {
     width: 40px;
     vertical-align: middle !important;
