feat: update table edit

--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -27,6 +27,11 @@
                       (searchChange)="
           store.search($event.searchText, $any($event.searchField))
         ">
+        <div class="col-auto"
+             filter>
+          <mix-dynamic-filter></mix-dynamic-filter>
+        </div>
+
         <div [header]="'Name'"
              key="displayName"
              mixTableColumn>
