--- a/libs/mix-ui/src/data-table/data-table.component.html
+++ b/libs/mix-ui/src/data-table/data-table.component.html
@@ -23,6 +23,8 @@
                                  tuiMultiSelectGroup></tui-data-list-wrapper>
         </tui-multi-select>
       </div>
+
+      <ng-content select="[filter]"></ng-content>
     </div>
   </div>
 
