--- a/libs/mix-ui/src/data-table/data-table.component.scss
+++ b/libs/mix-ui/src/data-table/data-table.component.scss
@@ -50,13 +50,14 @@
   &__filter {
     padding: var(--container-padding);
     width: 100%;
+    margin-bottom: 12px;
 
     .input {
       flex-grow: 1;
     }
 
     .select {
-      width: 150px;
+      width: 180px;
     }
   }
 
