--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -102,7 +102,8 @@
           <div class="d-flex gap-1">
             <mix-button [iconBtn]="true"
                         [type]="'outline'"
-                        (click)="updateSystemName(form.value.displayName || '')"><span class="mix-icon">refresh</span></mix-button>
+                        (click)="updateSystemName(form.value.displayName || '')"
+                        size="m"><span class="mix-icon">refresh</span></mix-button>
             <mix-input placeHolder="Unique system name"
                        formControlName="systemName"></mix-input>
           </div>
