--- a/apps/mix-cms/src/app/pages/portal/portal.layout.html
+++ b/apps/mix-cms/src/app/pages/portal/portal.layout.html
@@ -19,7 +19,7 @@
         <mix-main-side-menu></mix-main-side-menu>
       </div>
 
-      <div class="d-flex w-100 h-100" style="position: relative">
+      <div class="mix-main-layout__main-workspace">
         <div class="mix-main-layout__workspace">
           <router-outlet></router-outlet>
         </div>
@@ -27,8 +27,6 @@
         <div class="mix-main-layout__explorer">
           <mix-main-explorer></mix-main-explorer>
         </div>
-
-        <mix-portal-sidebar></mix-portal-sidebar>
       </div>
     </div>
   </div>
