--- a/apps/mix-cms/src/app/components/database-select/database-select.component.scss
+++ b/apps/mix-cms/src/app/components/database-select/database-select.component.scss
@@ -9,6 +9,10 @@
     width: 100%;
     margin-bottom: 6px;
     display: block;
+
+    &.--disable {
+      pointer-events: none;
+    }
   }
 
   &__title {
