--- a/apps/mix-cms/src/app/components/messenger-message/messenger-message.component.html
+++ b/apps/mix-cms/src/app/components/messenger-message/messenger-message.component.html
@@ -8,8 +8,7 @@
                   [avatarUrl]="message.from.avatar || ''"
                   [rounded]="true"
                   [size]="'s'"
-                  [text]="message.from.username || 'Unknown user'"
-                  [tuiHint]="message.from.username || 'Unknown user'"></tui-avatar>
+                  [text]="message.from.username || 'Unknown user'"></tui-avatar>
       <div style="height: 18px;"></div>
     </div>
 
