--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.scss
@@ -1,3 +1,6 @@
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
+
 .mix-dbs-table {
   display: flex;
   flex-direction: column;
